Update ceremony time and venue details

--- a/index (2).html
+++ b/index (2).html
@@ -13,7 +13,7 @@
             padding: 0;
             box-sizing: border-box;
         }
-
+        
         :root {
             --sage: #8a9e7c;
             --sage-light: #b5c9a8;
@@ -697,8 +697,8 @@
                     <span class="card-icon">🌿</span>
                     <h3>Ceremony & Reception</h3>
                     <p><strong>Date:</strong> January 1, 2027</p>
-                    <p><strong>Time:</strong> 3:00 PM</p>
-                    <p><strong>Venue:</strong> HeartReach Church</p>
+                    <p><strong>Time:</strong> 2:30 PM</p>
+                    <p><strong>Venue:</strong> Gardens Resort</p>
                     <p style="font-size:0.85rem; margin-top:0.5rem; color: var(--brown-light);">7 Umgazi St, Menlo Park, Pretoria</p>
                 </div>
                 <div class="detail-card">
