Update bank details and footer location

--- a/index (2).html
+++ b/index (2).html
@@ -755,7 +755,7 @@
                     <div class="bank-details-box">
                         <div class="bank-row">
                             <span class="b-label">Bank</span>
-                            <span class="b-value">Capitec Bank</span>
+                            <span class="b-value">Big Bank</span>
                         </div>
                         <div class="bank-row">
                             <span class="b-label">Account Name</span>
@@ -767,7 +767,7 @@
                         </div>
                         <div class="bank-row">
                             <span class="b-label">Branch Code</span>
-                            <span class="b-value">470010</span>
+                            <span class="b-value">427000</span>
                         </div>
                         <p class="bank-ref">Reference: Wedding Gift</p>
                     </div>
@@ -807,7 +807,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-names">Mary & Joseph</div>
-        <p>January 1, 2027 · HeartReach Church, Pretoria</p>
+        <p>January 1, 2027 · Gardens Resort, Pretoria</p>
         <p style="margin-top: 0.5rem;">With love &amp; gratitude ✿</p>
     </footer>
 
