Replace image sources in index.html

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                     <p>And now, we can't wait to begin the most wonderful chapter yet.</p>
                 </div>
                 <div class="story-image">
-                    <img src="imagies/Screenshot 2026-02-28 083439.jpeg" alt="Mary and Joseph" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="imagies/propose.png" alt="Mary and Joseph" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="img-placeholder" style="display:none;">Our photo here ✿</div>
                 </div>
             </div>
@@ -791,7 +791,7 @@
                     <div class="gallery-placeholder" style="display:none;">✿ Photo</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="imagies/Screenshot 2026-02-28 083511.jpeg" alt="Mary and Joseph"
+                    <img src="imagies/selfie.png" alt="Mary and Joseph"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="gallery-placeholder" style="display:none;">✿ Photo</div>
                 </div>
