Update RSVP link in index.html

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             <div class="rsvp-wrap">
                 <p>We can't wait to celebrate with you! Please let us know if you'll be joining us on our special day.</p>
                 <p class="rsvp-deadline">Kindly RSVP before December 1, 2026</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdkVpj25eLD_-QnTs7-30W3Vo5oVJ9OlI3PReOQktmZG7fs9Q/viewform"
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScN1iTn8P1FmWoMlBL5Ur1THU2f6pZyPJwzL8kxOZzRrC3VIw/viewform?usp=publish-editor"
                    target="_blank"
                    class="submit-btn">
                     Complete RSVP Form
