--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                 </div>
                 <div class="story-image">
                     <img src="imagies/propose.png" alt="Mary and Joseph" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="img-placeholder" style="display:none;">Our photo here ✿</div>
+                    <div class="imagies/propose.png" style="display:none;">imagies/propose.png ✿</div>
                 </div>
             </div>
         </div>
@@ -746,7 +746,7 @@
                     <span class="card-icon">🌷</span>
                     <h3>Gift Registry</h3>
                     <p>Browse our curated selections for our new home together</p>
-                    <a href="https://www.myregistry.com/wedding-registry/phindulo-singo-/5236883" target="_blank" class="registry-btn">View Registry</a>
+                    <a href="https://www.myregistry.com/za/en/" target="_blank" class="registry-btn">View Registry</a>
                 </div>
                 <div class="registry-card">
                     <span class="card-icon">🌼</span>
