--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                 </div>
                 <div class="story-image">
                     <img src="imagies/propose.png" alt="Mary and Joseph" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="imagies/propose.png" style="display:none;">imagies/propose.png ✿</div>
+                    <div class="imagies/propose.png" style="display:none;">Our photo here ✿</div>
                 </div>
             </div>
         </div>
