--- a/index.html
+++ b/index.html
@@ -791,9 +791,9 @@
                     <div class="gallery-placeholder" style="display:none;">✿ Photo</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="imagies/selfie.png" alt="Mary and Joseph"
+                    <img src="imagies/sefie.png" alt="Mary and Joseph"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="gallery-placeholder" style="display:none;">✿ Photo</div>
+                    <div class="imagies/sefie.png" style="display:none;">✿ Photo</div>
                 </div>
                 <div class="gallery-item">
                     <img src="imagies/side_pic.jpeg" alt="Mary and Joseph"
