--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                 <div class="gallery-item">
                     <img src="imagies/small_one.jpeg" alt="Mary and Joseph"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="gallery-placeholder" style="display:none;">✿ Photo</div>
+                    <div class="imagies/Screenshot 2026-02-28 221910.png" style="display:none;">✿ Photo</div>
                 </div>
                 <div class="gallery-item">
                     <img src="imagies/sefie.png" alt="Mary and Joseph"
@@ -798,7 +798,7 @@
                 <div class="gallery-item">
                     <img src="imagies/side_pic.jpeg" alt="Mary and Joseph"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="gallery-placeholder" style="display:none;">✿ Photo</div>
+                    <div class="imagies/Screenshot 2026-02-28 221848.png" style="display:none;">✿ Photo</div>
                 </div>
             </div>
         </div>
