--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="imagies/small_one.jpeg" alt="Mary and Joseph"
+                    <img src="imagies/Screenshot 2026-02-28 221910.png" alt="Mary and Joseph"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="imagies/Screenshot 2026-02-28 221910.png" style="display:none;">✿ Photo</div>
                 </div>
@@ -796,7 +796,7 @@
                     <div class="imagies/sefie.png" style="display:none;">✿ Photo</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="imagies/side_pic.jpeg" alt="Mary and Joseph"
+                    <img src="imagies/Screenshot 2026-02-28 221848.png" alt="Mary and Joseph"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="imagies/Screenshot 2026-02-28 221848.png" style="display:none;">✿ Photo</div>
                 </div>
